[project]
name = "threespiral"
version = "0.1.0"
description = ""
authors = [
    {name = "Jhonathan M",email = "nathan3boss@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
